css/style.css
/* palanquin-regular - latin */
@font-face {
    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
    font-family: "Palanquin";
    font-style: normal;
    font-weight: 400;
    src: url("../assets/fonts/palanquin-v17-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

/* palanquin-dark-regular - latin */
@font-face {
    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
    font-family: "Palanquin Dark";
    font-style: normal;
    font-weight: 400;
    src: url("../assets/fonts/palanquin-dark-v17-latin-regular.woff2")
        format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

body{
    padding-bottom: 80px;
}

header {
    height: 60px;
    background-color: rgba(231, 108, 31, 1);
}

.header-img {
    align-self: center;
}

header .content {
    display: flex;
}

.landing-img {
    height: 45dvh;
    width: 100%;
    object-fit: cover;
    object-position: 30% 25%;
    border-radius: 16px;
}

.landing-icon {
    height: 140px;
    position: absolute;
    top: 97.5%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.red {
    color: rgba(231, 108, 31, 1);
    font-family: inherit;
}

h1 {
    font-size: 40px;
    font-family: "Palanquin Dark";
}

.bottom-landingpage {
    font-size: 22px;
    font-weight: bold;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.landing {
    display: flex;
    flex-direction: column;
    gap: 80px;
}

.landing-section {
    padding-top: 16px;
    padding-bottom: 16px;
}

nav {
    position: fixed;
    bottom: 0;
    left: 0;

    width: 100%;
    height: 80px;
    background-color:rgba(54, 53, 52, 1);

    display: flex;
    justify-content: space-around;
    align-items: center;
}

footer{
    height: 120px;
    background-color:rgba(231, 108, 31, 1);
    color: white;
    font-size: 18px;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.copyright{
    display: flex;
    align-items: center;
    gap: 6px;
}

.copyright img{
    height: 24px;
}

.dish-header{
    height:80px;
    color: white;
    background-color: rgba(231, 108, 31, 1);

    text-align: center;
    font-size: 32px;
}

.dish-icon{
    height: 50px;
    position: absolute;
    left: 50%;
    top:-10%;
    transform: translate(-50%, -50%);
}

.dish{
    background-color: rgba(253, 234, 220, 1);
    border-radius: 16px;
    padding: 12px;

}

.dish-img{
    height: 90px;
    width: 100%;
    border-radius: 16px;

    object-fit: cover;
}

.bottom-dish{
    display: flex;
    justify-content: space-between;
}

.addBtn{
    background-color: rgba(255, 255, 255, 1);
    border-radius: 16px;
    padding: 2px 8px;
}

section .content{
    display: flex;
    flex-direction: column;
    gap: 18px;
}

section{
    padding-bottom: 48px;
}

.dish-container{
    display: flex;
    flex-direction: column;
    gap:16px;
}

#basket{
    display: none;

    position: fixed;
    inset: 0;
    width: 100%;
    height: 100dvh;

    background-color: rgba(54, 53, 52, 1);
    color: rgba(253, 234, 220, 1);

    padding: 16px 16px 80px 16px;
}

#basket.open{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
}

h4 {
    font-size: 32px;
}

.close-icon{
    height: 18px;
    position: absolute;
    top: 24px;
    right:24px;
}

#order{
    display: flex;
    flex-direction: column;
    gap: 8px;
    color: rgba(54, 53, 52, 1);

    width: 100%;

    max-height: 290px;
    overflow: auto;

    font-size: 20px;
    font-weight: bold;
}

.order-card{
    background-color:rgba(253, 234, 220, 1);
    border-radius: 16px;
    padding: 16px 16px;
}

.order-bottom{
    display:flex;
    justify-content: space-between;
}

#cart-badge {
    position: absolute;
    top: -6px;
    right: -6px;
    background: white;
    color: rgba(231, 108, 31, 1);
    font-size: 12px;
    width: 16px;
    height: 16px;
    border-radius: 50%;
    font-weight: bold;

    display: flex;
    align-items: center;
    justify-content: center;
}

/* #cart-bade.hidden {
    display: none;
} */

#confirmation{
    border: none;
    padding: 32px;

    width: 100vw;
    height: 100vh;
    max-width: none;
    max-height: none;
    background-color:rgba(54, 53, 52, 1);
    color:rgba(253, 234, 220, 1);
    
    font-weight: bold;
    font-size: 24px;
    text-align: center;
}

#confirmation[open]{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 16px;
}

h5{
    font-size: 32px;
}

.truck{
    width: 160px;
}

.no-scroll{
    overflow: hidden;
}

.delete{
    position: absolute;
    top: 12px;
    right:12px;
}

#basket-calculations{
    width: 100%;
    font-size: 18px;
}

.calc-row{
    display: flex;
    justify-content: space-between;
}

hr{
    border:none;
    height: 1px;
    background-color:rgba(253, 234, 220, 1);
}

.buy-btn{
    display: flex;
    justify-self: center;
    margin-top: 14px;

    background-color: rgba(231, 108, 31, 1);
    border-radius: 48px;
    padding: 6px 16px;

    font-size: 22px;
    font-weight: bold;
}

